--- a/modules/project-comments/client/views/public-comments/open-house-edit.html
+++ b/modules/project-comments/client/views/public-comments/open-house-edit.html
@@ -24,6 +24,6 @@
 
 <div class="modal-footer">
 	<button type="button" class="btn btn-default" ng-click="s.cancel()">Cancel</button>
-	<button type="button" class="btn btn-success" ng-click="s.ok()">OK</button>
+	<button type="button" class="btn btn-primary" ng-click="s.ok()">OK</button>
 </div>
 
