MEM-189: link documents modal and selection added to PCP.

--- a/modules/project-comments/client/views/period-edit.html
+++ b/modules/project-comments/client/views/period-edit.html
@@ -76,7 +76,8 @@
 						x-document-mgr-link-modal
 						x-project="project"
 						x-target-name="'Public Comment Period'"
-						x-target="period.relatedDocuments"><span class="glyphicon glyphicon-link"></span><span>Link Documents</span></button>
+						x-target="period.relatedDocuments"
+						x-published-only="'true'"><span class="glyphicon glyphicon-link"></span><span>Link Documents</span></button>
 			</div>
 			<div class="fb-body">
 				<div class="fb-list">
@@ -90,18 +91,18 @@
 								<span>Author</span>
 								<span class="sort-icon" ng-show="documentMgr.sorting.column === 'author'"></span>
 							</div>
-							<div class="col date-added-col sortable" ng-class="{'descending': !documentMgr.sorting.ascending}" ng-click="documentMgr.sortBy('type')">
+							<div hidden class="col date-added-col sortable" ng-class="{'descending': !documentMgr.sorting.ascending}" ng-click="documentMgr.sortBy('type')">
 								<span>Type</span>
 								<span class="sort-icon" ng-show="documentMgr.sorting.column === 'date'"></span>
 							</div>
-							<div class="col status-col last-col sortable" ng-class="{'descending': !documentMgr.sorting.ascending}" ng-click="documentMgr.sortBy('size')">
+							<div hidden class="col status-col last-col sortable" ng-class="{'descending': !documentMgr.sorting.ascending}" ng-click="documentMgr.sortBy('size')">
 								<span>Size</span>
 								<span class="sort-icon" ng-show="documentMgr.sorting.column === 'pub'"></span>
 							</div>
 						</div>
 					</div>
 					<ul>
-						<li class="fb-list-item" ng-hide="doc in period.relatedDocuments">
+						<li class="fb-list-item" ng-hide="period.relatedDocuments.length > 0">
 							<span class="fb-col-group">
 								<span class="col first-col">No Linked Files.</span>
 							</span>
