--- a/modules/documents/client/views/document-manager-link-modal.html
+++ b/modules/documents/client/views/document-manager-link-modal.html
@@ -1,4 +1,3 @@
-
 <div class="modal-header">
 	<button type="button" class="btn btn-default close" ng-click="linkModal.cancel()">
 		<span aria-hidden="true">&times;</span>
@@ -7,8 +6,7 @@
 </div>
 
 <div class="modal-body">
-
-
+	<x-document-mgr-link x-project="project" x-linked-files="linkModal.linkedFiles" x-published-only="linkModal.publishedOnly">
 </div>
 
 <div class="modal-footer clearfix">
