--- a/modules/project-comments/client/views/period-edit.html
+++ b/modules/project-comments/client/views/period-edit.html
@@ -111,22 +111,34 @@
 								</span>
 								<span class="col type-col">{{ doc.internalExt}}</span>
 								<span class="col size-col">{{ doc.internalSize | bytes:2 }}</span>
-								<div class="col actions-col">
-									<a class="btn icon-btn" href="/api/document/{{ doc._id }}/fetch" target="_self" title="Download File" ng-if="doc.userCan.read">
-										<span class="glyphicon glyphicon-download-alt"></span>
-									</a>
-									<button class="btn icon-btn" ng-if="doc.userCan.read && doc.internalMime === 'application/pdf'"
-											ng-show="doc.internalMime === 'application/pdf'"
-											x-modal-pdf-viewer
-											x-pdfobject="doc"
-											title="View File">
-										<span class="glyphicon glyphicon-eye-open"></span>
-									</button>
-									<button class="btn icon-btn"
-											ng-click="removeDocument(doc)">
-										<span class="glyphicon glyphicon-trash"></span>
-									</button>
-								</div>
+								<span class="row-actions visible">
+									<div class="btn-group">
+										<button class="btn icon-btn dropdown-toggle" type="button" ng-click="$event.originalEvent.dropdown = true" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+											<span class="glyphicon glyphicon glyphicon-option-vertical"></span>
+										</button>
+										<ul class="dropdown-menu pull-right">
+											<li>
+												<a class="btn icon-btn" href="/api/document/{{ doc._id }}/fetch" target="_self" title="Download File" ng-if="doc.userCan.read">
+													<span class="glyphicon glyphicon-download-alt"></span></a>
+											</li>
+											<li>
+												<button class="btn icon-btn" ng-if="doc.userCan.read && doc.internalMime === 'application/pdf'"
+														ng-show="doc.internalMime === 'application/pdf'"
+														x-modal-pdf-viewer
+														x-pdfobject="doc"
+														title="View File">
+													<span class="glyphicon glyphicon-eye-open"></span>
+												</button>
+											</li>
+											<li>
+												<button class="btn icon-btn"
+														ng-click="removeDocument(doc)">
+													<span class="glyphicon glyphicon-trash"></span>
+												</button>
+											</li>
+										</ul>
+									</div>
+								</span>
 							</span>
 						</li>
 					</ul>
