--- a/modules/project-comments/client/views/public-comments/main.html
+++ b/modules/project-comments/client/views/public-comments/main.html
@@ -41,15 +41,15 @@
 				<div class="fb-list">
 					<div class="column-header">
 						<div class="fb-col-group">
-							<div class="col name-col first-col sortable" ng-class="{'descending': !documentMgr.sorting.ascending}" ng-click="documentMgr.sortBy('name')">
+							<div class="col name-col first-col" ng-class="{'descending': !documentMgr.sorting.ascending}" ng-click="documentMgr.sortBy('name')">
 								<span>Name</span>
 								<span class="sort-icon" ng-show="documentMgr.sorting.column === 'name'"></span>
 							</div>
-							<div class="col author-col sortable" ng-class="{'descending': !documentMgr.sorting.ascending}" ng-click="documentMgr.sortBy('type')">
+							<div class="col author-col" ng-class="{'descending': !documentMgr.sorting.ascending}" ng-click="documentMgr.sortBy('type')">
 								<span>Type</span>
 								<span class="sort-icon" ng-show="documentMgr.sorting.column === 'author'"></span>
 							</div>
-							<div class="col status-col last-col sortable" ng-class="{'descending': !documentMgr.sorting.ascending}" ng-click="documentMgr.sortBy('size')">
+							<div class="col status-col last-col" ng-class="{'descending': !documentMgr.sorting.ascending}" ng-click="documentMgr.sortBy('size')">
 								<span>Size</span>
 								<span class="sort-icon" ng-show="documentMgr.sorting.column === 'pub'"></span>
 							</div>
@@ -68,20 +68,31 @@
 										<span class="fb-file glyphicon glyphicon-file" ng-if="doc.internalExt == 'pdf'"></span>
 										<span class="fb-img glyphicon glyphicon-picture" ng-if="doc.internalExt == 'png' && 'jpg' && 'jpeg'"></span>
 									</span>
-									{{doc.displayName}}
+									<a href="/api/document/{{ doc._id }}/fetch" target="_self">{{doc.displayName}}</a>
 								</span>
-								<span class="col actions-col last-col">
-									<a class="btn icon-btn" href="/api/document/{{ doc._id }}/fetch" target="_self" title="Download File" ng-if="doc.userCan.read">
-										<span class="glyphicon glyphicon-download-alt"></span>
-									</a>
-									<button class="btn icon-btn" ng-if="doc.userCan.read && doc.internalMime === 'application/pdf'"
-											ng-show="doc.internalMime === 'application/pdf'"
-											x-modal-pdf-viewer
-											x-pdfobject="doc"
-											title="View File">
-										<span class="glyphicon glyphicon-eye-open"></span>
-									</button>
-								</span>
+								<div class="row-actions visible">
+									<div class="btn-group">
+										<button class="btn icon-btn dropdown-toggle" type="button" ng-click="$event.originalEvent.dropdown = true" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+											<span class="glyphicon glyphicon glyphicon-option-vertical"></span>
+										</button>
+										<ul class="dropdown-menu pull-right">
+											<li>
+												<a class="btn icon-btn" href="/api/document/{{ doc._id }}/fetch" target="_self" title="Download File" ng-if="doc.userCan.read">
+													<span class="glyphicon glyphicon-download-alt"></span>
+												</a>
+											</li>
+											<li>
+												<button class="btn icon-btn" ng-if="doc.userCan.read && doc.internalMime === 'application/pdf'"
+													ng-show="doc.internalMime === 'application/pdf'"
+													x-modal-pdf-viewer
+													x-pdfobject="doc"
+													title="View File">
+													<span class="glyphicon glyphicon-eye-open"></span>
+												</button>
+											</li>
+										<ul>
+									</div>
+								</div>
 							</span>
 						</li>
 					</ul>
