MEM-190 - Adding convenience link to period-edit.html
- Fixing column widths on main pcp view

--- a/modules/project-comments/client/views/period-edit.html
+++ b/modules/project-comments/client/views/period-edit.html
@@ -107,7 +107,7 @@
 										<span class="fb-file glyphicon glyphicon-file" ng-if="!['png','jpg','jpeg'].includes(doc.internalExt)"></span>
 										<span class="fb-img glyphicon glyphicon-picture" ng-if="['png','jpg','jpeg'].includes(doc.internalExt)"></span>
 									</span>
-									{{doc.displayName}}
+									<a href="/api/document/{{ doc._id }}/fetch" target="_self">{{doc.displayName}}</a>
 								</span>
 								<span class="col type-col">{{ doc.internalExt}}</span>
 								<span class="col size-col">{{ doc.internalSize | bytes:2 }}</span>
