--- a/modules/project-comments/client/views/public-comments/main.html
+++ b/modules/project-comments/client/views/public-comments/main.html
@@ -45,11 +45,11 @@
 								<span>Name</span>
 								<span class="sort-icon" ng-show="documentMgr.sorting.column === 'name'"></span>
 							</div>
-							<div class="col author-col" ng-class="{'descending': !documentMgr.sorting.ascending}" ng-click="documentMgr.sortBy('type')">
+							<div class="col type-col" ng-class="{'descending': !documentMgr.sorting.ascending}" ng-click="documentMgr.sortBy('type')">
 								<span>Type</span>
 								<span class="sort-icon" ng-show="documentMgr.sorting.column === 'author'"></span>
 							</div>
-							<div class="col status-col last-col" ng-class="{'descending': !documentMgr.sorting.ascending}" ng-click="documentMgr.sortBy('size')">
+							<div class="col size-col last-col" ng-class="{'descending': !documentMgr.sorting.ascending}" ng-click="documentMgr.sortBy('size')">
 								<span>Size</span>
 								<span class="sort-icon" ng-show="documentMgr.sorting.column === 'pub'"></span>
 							</div>
