--- a/modules/documents/client/views/document-manager-link.html
+++ b/modules/documents/client/views/document-manager-link.html
@@ -142,7 +142,7 @@
                             </span>
                             {{doc.displayName}}
                         </span>
-                        <div class="col actions-col last-col">
+                        <div class="row-actions visible">
                             <button class="btn icon-btn"
                                 ng-click="documentMgr.unlinkFile(doc)">
                                 <span class="glyphicon glyphicon-trash"></span>
