MEM-193 - Visual Indicator for selected actions
- Added markup to user-activities.html for loading indicator

--- a/modules/core/client/styles/spinner.scss
+++ b/modules/core/client/styles/spinner.scss
@@ -1,6 +1,6 @@
 
-$spinner-width: 40px;
-$spinner-color: #1a5a96;
+$spinner-width: 50px;
+$spinner-color: #5091cd;
 $spinner-bg: rgba(255,255,255,0.8);
 $spinner-invert-color: #FFF;
 $spinner-invert-bg: rgba(0,0,0,0.8);
