--- a/modules/users/client/views/user-partials/user-activities.html
+++ b/modules/users/client/views/user-partials/user-activities.html
@@ -1,9 +1,13 @@
 
-
-<!-- LEFT PANEL -->
-<aside class="left-panel hidden">
-    <tmpl-system-menu x-menu-context="'mylist'"></tmpl-system-menu>
-</aside>
+<!--
+<div class="spinner-container fixed">
+    <div class="spinner">
+        <svg class="circular" viewBox="25 25 50 50">
+        <circle class="spin-path" cx="50" cy="50" r="20" fill="none" stroke-width="4" stroke-miterlimit="10"/>
+        </svg>
+    </div>
+</div>
+-->
 
 <!-- MAIN PANEL -->
 <div class="main-panel">
