--- a/modules/communications/client/views/communication-edit.html
+++ b/modules/communications/client/views/communication-edit.html
@@ -34,14 +34,19 @@
 						<input class="form-control" ng-model="s.communication.name" id="name" name="name" title="Name" required/>
 					</div>
 					<div class="form-group">
-						<label class="control-label">Related Content ({{artifacts.length}})</label>
+						<label class="control-label">Related Content ({{documents.length}})</label>
 						<div class="tag-list-container form-control clearfix">
 							<ul class="tag-list">
-								<li class="tag" ng-repeat="art in artifacts">
-									<span class="tag-name">{{art.name}}</span>
-									<button class="btn" type="button" ng-click="removeArtifact(art._id)"><span aria-hidden="true">×</span></button>
+								<li class="tag" ng-repeat="doc in documents">
+									<span class="tag-name">{{doc.displayName}}</span>
+									<button class="btn" type="button" ng-click="removeDocument(doc._id)"><span aria-hidden="true">×</span></button>
 								</li><li class="add-tag">
-									<button class="btn btn-default btn-sm" type="button" x-artifact-list-chooser x-project="project" x-current="artifacts"><span class="glyphicon glyphicon-plus"></span></button>
+									<button class="btn btn-default btn-sm" title="Add Documents"
+											x-document-mgr-link-modal
+											x-project="project"
+											x-target-name="s.communication.name"
+											x-published-only="'false'"
+									        x-on-ok="addDocuments"><span class="glyphicon glyphicon-plus"></span><span></span></button>
 								</li>
 							</ul>
 						</div>
@@ -51,7 +56,7 @@
 							x-email-template-chooser
 							x-project="project"
 							x-current="emailTemplate"
-              x-group-restricted="'invitation'">Use Existing Template</button>
+              				x-group-restricted="'invitation'">Use Existing Template</button>
 					</div>
 					<div class="form-group" x-show-errors>
 						<label class="control-label">Subject<em class="required">(Required)</em></label>
