--- a/modules/communications/client/views/communication-view.html
+++ b/modules/communications/client/views/communication-view.html
@@ -29,9 +29,9 @@
 					<span class="value">{{s.communication.name}}</span>
 				</div>
 				<div class="detail-row">
-					<label>Related Content ({{artifacts.length}})</label>
+					<label>Related Content ({{documents.length}})</label>
 					<div class="anchor-list">
-						<a ng-repeat="art in artifacts" ui-sref="p.artifact.view({artifactId:'{{art._id}}'})">{{art.name}}{{$last ? '' : ', '}}</a>
+						<a ng-repeat="doc in documents" href="/api/document/{{ doc._id }}/fetch" target="_self">{{doc.displayName}}{{$last ? '' : ', '}}</a>
 					</div>
 				</div>
 				<div class="detail-row">
